# pretzelai

./: .bumpversion.cfg  .dockerignore  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .prettierignore  .yarnrc.yml  Dockerfile  LICENSE  PRETZEL_CONTRIBUTORS  README.md  RELEASE.md  buildapi.py  clean.py  components.json  craco.config.js  ellipsis.yaml  index.html  jupyterlab.desktop  package-lock.json  package.json  pyproject.toml  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.github/: labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  build-wheels-all-platforms.yml  check-i18n.yml  galata-update.yml  galata.yml  linuxjs-tests.yml  linuxtests.yml  macostests.yml  prep-release.yml  publish-changelog.yml  publish-release.yml  reject-staging-changes.yml  windowstests.yml
buildutils/: tsconfig.json
buildutils/src/: ensure-repo.ts  index.ts  prepare-python-release.ts  update-core-mode.ts
cloud/: aws_lambda.js
dev_mode/: package.json  style.js
docker/: Dockerfile
docs/source/developer/: accessibility.rst  contributing.rst
docs/source/getting_started/: accessibility.rst
examples/: example_check.py
examples/app/: package.json
examples/cell/: package.json
examples/console/: package.json
examples/federated/core_package/: package.json
examples/federated/md_package/: package.json
examples/filebrowser/: package.json
examples/notebook/: package.json
examples/terminal/: package.json
galata/: jupyter_server_test_config.py  package.json
galata/extension/: package.json
galata/test/documentation/plugins.test.ts-snapshots/: plugins-documentation-linux.json
jupyterlab/: _version.py  cli.py  labapp.py
jupyterlab/galata/@jupyterlab/galata-extension/: build_log.json  package.json
jupyterlab/galata/@jupyterlab/galata-extension/static/: lib_extension_index_js.193465adc9aa81a6b29f.js  remoteEntry.c02499d22dccd0ffbd5a.js
jupyterlab/handlers/: announcements.py
jupyterlab/staging/: package.json
pretzelai/: __main__.py  cli.py  commands.py  labextensions.py  pytest_plugin.py
pretzelai/extensions/: manager.py  pypi.py
pretzelai/handlers/: announcements.py  build_handler.py  extension_manager_handler.py  plugin_manager_handler.py
pretzelai/staging/: package.json
pretzelai/tests/: conftest.py  test_extensions.py  test_jupyterlab.py  test_registry.py
pretzelai_visual/: .dockerignore  LICENSE  package-lock.json  package.json  render.yaml  test.json  vite.config.ts
pretzelai_visual/cloud/: README.md
pretzelai_visual/public/: manifest.json
pretzelai_visual/src/: index.css
pretzelai_visual/src/components/: AI.tsx  Download.tsx  Editors.tsx  Feedback.tsx  FilterBlock.tsx  Sort.tsx  TableBlock.tsx  TableView.tsx  Upload.tsx  UserQuery.tsx
pretzelai_visual/src/components/ui/: Block.tsx  resizable.tsx  settings-icon.tsx
pretzelai_visual/src/core/: worker.ts
pretzelai_visual/src/store/: useStore.ts
public/: github_public_code_editors.csv  index.html  manifest.json  seed_investment_data.csv
scripts/: ci_script.ps1  ci_script.sh  milestone_check.py  release_prep.sh  release_test.sh  watch_dev.py  watch_packages.py
src/: App.tsx  index.tsx
src/components/: AI.tsx  Chart.tsx  Columns.tsx  CreateColumn.tsx  Download.tsx  Editors.tsx  FilterBlock.tsx  Icons.tsx  Pivot.tsx  Python.tsx  RemoveDuplicate.tsx  RemoveDuplicates.tsx  Sort.tsx  TableBlock.tsx  TableView.tsx  Upload.tsx  UserQuery.tsx  worker.ts
src/components/ui/: alert-dialog.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  loading.tsx  popover.tsx  select.tsx  table.tsx  textarea.tsx  textinput.tsx  toggle-group.tsx  toggle.tsx
src/core/: worker.ts
src/lib/: config.ts  duckdb.ts  eChartsTheme.json  prompts.ts  utils.ts  worker.ts
src/store/: useStore.ts
testutils/: package.json
